--- a/docs/assets/css/read-the-docs.css
+++ b/docs/assets/css/read-the-docs.css
@@ -4,16 +4,16 @@ footer {
 
 /* Dark background */
 .wy-nav-content {
-    background: #404040;
+    background: #202020;
 }
 
 body .wy-nav-content-wrap {
-    background: #404040;
+    background: #202020;
 }
 
-/* White text */
+/* nearly white text */
 body {
-    color: white;
+    color: #d6d2cd;
 }
 
 /* Not found wiki-links */
@@ -54,3 +54,85 @@ color:white;
 .fa-code-fork{
 display:none;
 }
+
+/* blue callout */
+.admonition.todo, .admonition.note, .admonition.abstract, .admonition.example, .admonition.info, .admonition.question , .admonition.tip {
+background: #1c4869;
+
+}
+.admonition.todo .admonition-title,
+.admonition.note .admonition-title,
+.admonition.abstract .admonition-title,
+.admonition.info .admonition-title,
+.admonition.tip .admonition-title,
+.admonition.question .admonition-title,
+.admonition.example .admonition-title
+{
+background: #007dcf;
+}
+
+/* green callout */
+.admonition.success{
+background: green;
+}
+.admonition.success .admonition-title{
+background: #1abc9c;
+}
+
+/* grey callout */
+.admonition.quote{
+background: grey;
+color:white;
+}
+.admonition.quote .admonition-title{
+background: #545353;
+}
+
+/* red callout */
+.admonition.danger, .admonition.failure, .admonition.bug {
+background: #a2392e;
+color:white;
+}
+.admonition.danger .admonition-title, .admonition.failure .admonition-title, .admonition.bug .admonition-title{
+background: #e55345;
+}
+
+/* orange callout */
+.admonition.warning{
+background: #b66404;
+color:white;
+}
+.admonition.warning .admonition-title{
+background: #e59b45;
+}
+
+
+/* current nav menu background */
+.wy-menu-vertical li.current {
+background: #494949;
+}
+/* current nav menu links */
+.wy-menu-vertical li.toctree-l2 a
+{
+color: #d6d6d6;
+}
+.wy-menu-vertical li.toctree-l1.current>a {
+background:#6d6d6d;
+color:#e3e3e3;
+}
+
+
+.wy-menu-vertical a {
+color: #a1a1a1;
+}
+/* current nav menu links */
+.rst-versions{
+color: #a1a1a1;
+}
+
+.rst-current-version{
+
+    opacity:0.5;
+}
+
+
