--- a/docs/assets/css/read-the-docs.css
+++ b/docs/assets/css/read-the-docs.css
@@ -135,4 +135,12 @@ color: #a1a1a1;
     opacity:0.5;
 }
 
+.rst-content code, .rst-content pre code {
+background:black;
+border:0px solid #e1e4e5;
+color:white;
+}
+.hljs-meta .hljs-string, .hljs-regexp, .hljs-string{
+color:#74e62c;
+}
 
