--- a/docs/assets/css/customization.css
+++ b/docs/assets/css/customization.css
@@ -17,6 +17,14 @@ Customize dark theme
     opacity: 1;
 }
 
+/* thinner font */ 
+.md-typeset {
+    font-weight: 300  ;    font-size: 0.75rem;
+}
+
+body {
+    font-size: 0.777778rem;
+}
 
 /* make hyperlinks bold */ /* DISABLED
 .md-typeset a, .md-typeset a:before {
@@ -24,9 +32,34 @@ Customize dark theme
 } */
 
 [data-md-color-scheme=slate][data-md-color-primary=black], [data-md-color-scheme=slate][data-md-color-primary=blue-grey], [data-md-color-scheme=slate][data-md-color-primary=grey], [data-md-color-scheme=slate][data-md-color-primary=white]{
-    --md-typeset-a-color: rgb(167, 244, 23);  /* URL color basic */
-    --md-accent-fg-color: rgb(255, 218, 11);  /* URL color hover */
+    --md-typeset-a-color: #6997f4;  /* URL color basic, previous green rgb(167, 244, 23); */
+    --md-accent-fg-color: #57d1ff;  /* URL color hover, previous yellow rgb(255, 218, 11) */
 }
+
+
+[data-md-color-scheme="slate"] a:hover {
+    color: #57d1ff;
+    text-decoration: underline;
+}
+
+/* Visited links */
+[data-md-color-scheme="slate"]  .wy-nav-content a:visited:not([class="icon icon-home"]){
+    color: #b86bfb;
+}
+[data-md-color-scheme="slate"]  a.icon.icon-home:visited {
+    color: white;
+}
+[data-md-color-scheme="slate"]  a.icon.icon-home {
+    color: white;
+}
+
+
+
+[data-md-color-scheme="slate"] .md-content{
+    background: #2b2a2a ;
+
+}
+
 
 
 [data-md-color-scheme="slate"] { 
