--- a/docs/assets/css/customization.css
+++ b/docs/assets/css/customization.css
@@ -19,7 +19,8 @@ Customize dark theme
 
 /* thinner font */ 
 .md-typeset {
-    font-weight: 300  ;    font-size: 0.75rem;
+    font-weight: 300  ;    
+    font-size: 0.75rem;
 }
 
 body {
